2016-01-05  Jérôme Pasquier  <rainbru@free.fr>

	* network/src/benchmark/ : change headers date for 2016.
	* meta/src/*.pm: change footers date for 2016.

2016-01-04  Jérôme Pasquier  <rainbru@free.fr>

	* client/src/: change headers date for 2016.

2015-10-28  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: uses FindGettext.
	* README.md: added cmake based install instructions.
	* INSTALL: basic cmake based steps.

2015-09-08  Jérôme Pasquier  <rainbru@free.fr>

	* logger/AUTHORS: move to top-level and remove all other copies.
	* logger/COPYING: move to top-level and remove other copies (client,
	meta, network, server,services).

2015-09-05  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (BUILD_LOGREADER): add an error message and fatal
	error if we can't find rbuic4.

	* CMakeLists.txt (BUILD_LOGREADER): correctly generate MainWindow_ui
	ruby sources from .ui file.

2015-09-05  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: trying to use rbuic using a custom_target.

2015-08-24  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: conditionnal logger examples compilation works.

2015-08-02  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: correctly build services and server with cmake.

2015-07-29  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (find_package): search for Boost packages.
	* CMakeLists.txt (include_directories): adds CMAKE_SOURCE_DIR to
	make the client find config.h
